--- a/styles/base.css
+++ b/styles/base.css
@@ -2,10 +2,9 @@
   --heading-font: "Merriweather", serif;
   --body-font: "Roboto", sans-serif;
   --background-color: #f4f4f9;
-  --secondary-color: #ff9800;
   --main-text: #333;
   --accent-color: #1e88e5;
-  --header-background-color: #212121;
+  --header-background-color: #1b1818;
   --header-text-color: #ffffff;
 }
 
