fiinal change done

--- a/styles/base.css
+++ b/styles/base.css
@@ -27,7 +27,7 @@ header {
   width: 100%;
 }
 
-.course-title {
+#course-title {
   display: block;
   font-size: 1.75rem;
   text-align: center;
@@ -98,8 +98,8 @@ main section.card h2 {
 
 main h1 {
   position: absolute;
-  top: -7rem;
-  right: 0;
+  top: -5.6rem;
+  left: 59.9rem;
   font-family: var(--heading-font);
 }
 
