--- a/styles/temples.css
+++ b/styles/temples.css
@@ -102,12 +102,23 @@ main {
   max-width: 375px;
   margin: 0 auto;
   padding: 0.1rem 0.1rem 6rem 0.1rem;
+  /* position: relative; */
 }
 
 main h1 {
   text-align: center;
   padding-bottom: 1rem;
   font-family: var(--heading-font);
+}
+
+main h2 {
+  font-family: var(--heading-font);
+  font-size: 1.4rem;
+  text-align: center;
+  margin-bottom: 0.1rem;
+  color: var(--text-color);
+  padding: 0.1rem 0;
+  border-bottom: 2px solid var(--accent1-color);
 }
 
 .image-album {
