--- a/styles/temples.css
+++ b/styles/temples.css
@@ -18,7 +18,6 @@ body {
   background-color: var(--background-color);
   color: var(--text-color);
   font-family: var(--body-font);
-  padding-bottom: 7rem;
 }
 
 header {
@@ -152,12 +151,11 @@ footer {
   background-color: var(--primary-color);
   font-size: 1.2rem;
   padding-top: 1.2rem;
-  bottom: 0;
-  position: fixed;
   width: 100%;
   height: 5rem;
   color: var(--text-color);
   text-align: center;
+  margin-top: 1rem;
 }
 
 @media screen and (max-width: 767px) {
