--- a/styles/filtered-temples.css
+++ b/styles/filtered-temples.css
@@ -253,7 +253,7 @@ footer {
   }
 
   main h2 {
-    grid-column: 1 / -1;
+    /* grid-column: 1 / -1; */
     text-align: center;
     margin: 1rem 0 0 0.1rem;
     padding-bottom: 0.3rem;
@@ -276,5 +276,11 @@ footer {
     height: 100%;
     object-fit: cover;
     display: block;
+  }
+
+  .card {
+    background-color: #f9f9f9;
+    border: 1px solid #ccc;
+    padding: 1rem;
   }
 }
