--- a/styles/filtered-temples.css
+++ b/styles/filtered-temples.css
@@ -157,7 +157,7 @@ footer {
   border-radius: 8px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   text-align: center;
-  font-family: var(--heading-font);
+
 }
 
 .card h3 {
@@ -165,6 +165,7 @@ footer {
   font-weight: bold;
   margin-bottom: 0.5rem;
   color: #111;
+  font-family: var(--heading-font);
 }
 
 .card p {
@@ -242,45 +243,35 @@ footer {
   }
 
   main {
-    max-width: 800px;
-    margin: 2.2rem auto 0.5rem auto;
+    max-width: 1100px;
+    margin: 2.8rem auto 0.5rem auto;
   }
 
-  h1 {
+  main h1 {
     position: absolute;
-    top: 6rem;
-    right: 35.4rem;
+    top: 4.9rem;
+    right: 46rem;
+    padding: 0.7rem 0;
   }
 
   main h2 {
     /* grid-column: 1 / -1; */
     text-align: center;
     margin: 1rem 0 0 0.1rem;
-    padding-bottom: 0.3rem;
+    padding: 0.6rem 0 0.5rem 0;
     border-bottom: 3px solid var(--accent1-color);
   }
 
   .image-album {
-    display: grid;
     grid-template-columns: repeat(3, 1fr);
-    position: relative;
   }
 
-  .image-album>* {
+  .image-album > * {
     aspect-ratio: 1 / 1;
     /* overflow: hidden; */
   }
 
-  .image-album img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    display: block;
-  }
-
   .card {
-    background-color: #f9f9f9;
-    border: 1px solid #ccc;
     padding: 1rem;
   }
 }
