--- a/styles/filtered-temples.css
+++ b/styles/filtered-temples.css
@@ -142,7 +142,7 @@ main h2 {
 footer {
   background-color: var(--primary-color);
   font-size: 1.2rem;
-  padding-top: 1.2rem;
+  padding: 1.2rem 0.2rem 0.5rem 0.2rem;
   width: 100%;
   height: 5rem;
   color: var(--text-color);
@@ -266,7 +266,7 @@ footer {
     grid-template-columns: repeat(3, 1fr);
   }
 
-  .image-album > * {
+  .image-album>* {
     aspect-ratio: 1 / 1;
     /* overflow: hidden; */
   }
