--- a/project/styles/siteplan.css
+++ b/project/styles/siteplan.css
@@ -6,6 +6,7 @@
    --accent3-color: #98b9f2;
    --body-font: "Lato", sans-serif;
    --heading-font: "Poppins", sans-serif;
+   --accent-font:"Montserrat", sans-serif;
  }
 
  * {
