--- a/styles/form.css
+++ b/styles/form.css
@@ -2,7 +2,7 @@
    --primary-color: #f8f9fa;
    --secondary-color: #141b41;
    --accent1-color: #306bac;
-   --accent2-color: #4562f2;
+   --accent2-color: #0e2ecd;
    --accent3-color: #98b9f2;
    --body-font: "Lato", sans-serif;
    --heading-font: "Poppins", sans-serif;
@@ -48,7 +48,7 @@
 
  .wrapper {
    width: max(40%, 600px);
-   background-color: #f0f0f0;
+   background-color: var(--primary-color);
    border-radius: 0 15px 15px 0;
    padding: 20px;
    display: flex;
@@ -77,10 +77,9 @@
  form input,
  form select,
  form textarea {
-   border: 1px solid #ccc;
+   border: 1px solid var(--secondary-color);
    border-radius: 6px;
-   background-color: #fff;
-   border: none;
+   background-color: var(--primary-color);
  }
 
  .wrapper .select,
@@ -101,6 +100,7 @@
    font-size: 1rem;
    font-weight: bold;
    margin-bottom: 0.4rem;
+   padding: 0 5px;
  }
 
  .wrapper .select select,
@@ -111,13 +111,15 @@
    padding: 10px;
    font-size: 1.1rem;
    margin-top: 0.4rem;
-   border: none;
+   border: 1px solid var(--accent3-color);
+   transition: border-left 300ms ease-in-out;
  }
 
  .wrapper .select select:focus,
  .wrapper .installation input:focus,
  .wrapper .name input:focus,
- .wrapper .review textarea:focus {
+ .wrapper .review textarea:focus,
+ .wrapper input[type="submit"]:focus {
    outline: none;
  }
 
@@ -126,9 +128,7 @@
    flex-wrap: nowrap;
    justify-content: space-around;
    align-items: center;
-   /* width: auto; */
-   /* max-width: 100%;
-   margin-top: -0.3rem; */
+   margin-top: -0.3rem;
  }
 
  .rating-items {
@@ -137,7 +137,6 @@
    align-items: center;
    justify-content: center;
    cursor: pointer;
-   /* width: auto; */
    min-width: 50px;
    max-width: 80px;
    flex: 1 1 0;
@@ -175,10 +174,6 @@
  }
 
  .wrapper input[type="submit"] {
-   display: flex;
-   flex-direction: column;
-   align-items: center;
-   justify-content: center;
    padding: 12px 25px;
    font-size: 1.5rem;
    text-align: center;
@@ -188,7 +183,7 @@
    cursor: pointer;
    background-color: var(--accent1-color);
    color: white;
-   transition: background-color 0.3s ease;
+   transition: background-color 0.5s ease;
  }
 
  .wrapper input[type="submit"]:hover {
@@ -211,3 +206,22 @@
      border-radius: 0;
    }
  }
+
+ .wrapper .select select:invalid:user-invalid,
+ .wrapper .rating-items input:invalid:user-invalid,
+ .wrapper .installation input:invalid:user-invalid {
+   border-left: 10px solid #950b19;
+ }
+
+ .wrapper .select select:required:valid,
+ .wrapper .rating-items input:required:valid,
+ .wrapper .installation input:required:valid {
+   border-left: 10px solid #28a745;
+ }
+
+ /* .error-message {
+   color: #dc3545;
+   font-size: 0.9rem;
+   margin-top: 0.25rem;
+   transition: opacity 0.3s ease;
+ } */
