--- a/styles/form.css
+++ b/styles/form.css
@@ -23,7 +23,7 @@
    flex-direction: column;
    min-height: 100vh;
    font-family: var(--body-font);
-   background-image: url(../images/background.jpg);
+   background-image: url(../images/background.webp);
    background-repeat: no-repeat;
    background-size: cover;
    color: var(--secondary-color);
