--- a/project/styles/index.css
+++ b/project/styles/index.css
@@ -14,6 +14,11 @@
   padding: 0;
 }
 
+.tagline,
+#tagline {
+  color: black;
+}
+
 body {
   background: var(--primary-color);
   /* color: #333; */
@@ -130,6 +135,14 @@ main {
 
 .hero {
   position: relative;
+  /* text-align: center; */
+  color: #fff;
+  /* padding: 50px 20px; */
+}
+
+.hero picture {
+  width: 100%;
+  display: block;
 }
 
 .hero img {
@@ -137,48 +150,33 @@ main {
   height: auto;
   object-fit: cover;
   max-width: 100%;
+  display: block;
 }
 
 .hero h1 {
-  font-size: 1.5rem;
-  position: absolute;
+  font-size: 2rem;
+  /* position: absolute;
   top: 2rem;
-  left: 3rem;
+  left: 3rem; */
   color: var(--secondary-color);
-}
-
-.hero .tagline {
-  font-size: 1.1rem;
-  margin: 8px 0;
-  position: absolute;
-  top: 6rem;
-  left: 5rem;
-  color: var(--secondary-color);
-
 }
 
 .hero .cta-btn {
-  background: #f77f00;
-  padding: 10px 18px;
-  border-radius: 6px;
-  font-size: 0.7rem;
-  border: none;
-  margin: 0 auto;
-  display: block;
-  position: absolute;
-  bottom: 2rem;
-  left: 9rem;
-  text-align: center;
-  color: white;
+  /* background: #f77f00; */
+  display: inline-block;
+  margin-top: 15px;
+  padding: 10px 25px;
+  background-color: #1352a8;
+  color: #fff;
   text-decoration: none;
-  /* z-index: -1; */
+  border-radius: 5px;
 }
 
 .intro,
 .testimonials,
 .map {
   padding: 1.2rem;
-  text-align: center;
+  /* text-align: center; */
   font-size: 1.1rem
 }
 
@@ -232,7 +230,7 @@ main {
 }
 
 .stream-card span {
-  font-weight: bold;
+  /* font-weight: bold; */
   color: var(--secondary-color);
   font-size: 1rem;
 }
@@ -268,6 +266,7 @@ main {
   margin-top: 1rem;
   border-radius: 8px;
   box-shadow: 1px 1px 4px rgba(20, 27, 65, 0.6);
+  overflow: hidden;
 }
 
 .testimonials h2 {
@@ -276,6 +275,11 @@ main {
 
 .testimonial-box h4 {
   margin-top: 10px;
+  transition: transform 0.5s, opacity 0.5s;
+}
+
+.testimonial-box .quote {
+  transition: transform 0.5s, opacity 0.5s;
 }
 
 button#nextTestimonial {
@@ -495,23 +499,6 @@ footer {
   vertical-align: middle;
 }
 
-@media screen and (max-width: 800px) {
-  .hideOnMobile {
-    display: none;
-  }
-
-  #menu {
-    display: block;
-  }
-}
-
-@media screen and (max-width: 480px) {
-  nav .sidebar {
-    width: 100%;
-    max-width: 100%;
-  }
-}
-
 .modal {
   display: none;
   position: fixed;
@@ -558,4 +545,115 @@ footer {
     transform: scale(1);
     opacity: 1;
   }
+}
+
+#last-modified {
+  padding: 0.5rem 0;
+}
+
+@media screen and (max-width: 800px) {
+  .hideOnMobile {
+    display: none;
+  }
+
+  #menu {
+    display: block;
+  }
+
+  .tagline {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  nav .sidebar {
+    width: 100%;
+    max-width: 100%;
+  }
+}
+
+@media screen and (min-width: 767px) {
+  .hero {
+    display: grid;
+    /* align-items: center; */
+    grid-template-columns: repeat(2, 1fr);
+    /* min-height: 450px; */
+    /* text-align: right; */
+    background-color: #fff;
+    box-shadow: 1px 1px 4px rgba(20, 27, 65, 0.6);
+    margin: 1rem 2rem;
+    gap: 15px;
+    border-radius: 8px;
+  }
+
+  .hero div {
+    /* background-color: green; */
+    padding: 15px;
+    width: 100%;
+    height: 100%;
+  }
+
+  .hero h1 {
+    margin: -1.1rem auto;
+    display: block;
+    font-size: 2.2rem;
+    /* text-align: left; */
+  }
+
+  .hero div .second-content p.tagline {
+    padding-top: 1.5rem;
+    font-size: 1.2rem;
+    line-height: 1.3;
+  }
+
+  .hero div .second-content p#tagline {
+    padding-top: 2.6rem;
+    font-size: 2rem;
+  }
+
+  .hero .second-content a {
+    margin-top: 2rem;
+  }
+
+  #tagline {
+    color: black;
+  }
+
+  .hero picture img {
+    position: relative;
+    max-width: 100%;
+    height: auto;
+    object-fit: cover;
+  }
+
+  .hero picture {
+    /* float: left; */
+    position: relative;
+  }
+
+  .intro {
+    display: none;
+  }
+
+  .filters {
+    margin-top: 2rem;
+  }
+
+  .stream-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    row-gap: 1.5rem;
+    padding: 0 1rem;
+  }
+
+  /* 
+  .hero h1,
+  .hero .tagline,
+  .hero .cta-btn {
+    margin-left: 40px;
+  }
+
+  .hero>*:not(picture) {
+    flex: 1;
+  } */
 }
