--- a/project/styles/index.css
+++ b/project/styles/index.css
@@ -30,11 +30,14 @@ body {
 
 header {
   background-color: var(--secondary-color);
-  display: flex;
+  /* display: flex;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: space-around;
   width: 100%;
-  max-width: 100%;
+  max-width: 100%; */
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  align-items: center;
 }
 
 header .logo {
@@ -49,6 +52,8 @@ header .logo {
 header .main-heading {
   font-size: 1.6rem;
   font-weight: bold;
+  color: var(--primary-color);
+
   /* display: none; */
 }
 
@@ -73,14 +78,14 @@ header a {
   align-items: center;
   padding: 0 25px;
   text-decoration: none;
-  color: #f0f0f0;
+  color: var(--primary-color);
   font-size: 1rem;
   width: 100%;
 }
 
-header a:hover,
-header li:hover {
-  background-color: #f0f0f0;
+header a:hover {
+  background-color: var(--primary-color);
+  color: var(--secondary-color);
   border-radius: 6px;
 }
 
@@ -276,6 +281,8 @@ main {
 
 .testimonials h2 {
   color: var(--accent1-color);
+  margin-top: -2rem;
+  padding-top: 1rem;
 }
 
 .testimonial-box h4 {
@@ -454,6 +461,12 @@ input[type="submit"]:focus,
   border: none;
 }
 
+.map h2 {
+  color: var(--accent1-color);
+  margin-top: -2.2rem;
+  padding-top: 1rem;
+}
+
 iframe {
   width: 100%;
   height: 200px;
@@ -560,12 +573,24 @@ footer {
 }
 
 @media screen and (max-width: 800px) {
+  header {
+    grid-template-columns: 1fr 5fr 1fr;
+  }
+
+  header .main-heading {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: 1rem;
+  }
+
   .hideOnMobile {
     display: none;
   }
 
   #menu {
     display: block;
+    /* padding-left: 6rem; */
   }
 
   .tagline {
@@ -584,7 +609,7 @@ footer {
   }
 }
 
-@media screen and (min-width: 767px) {
+@media screen and (min-width: 800px) {
   .hero {
     display: grid;
     /* align-items: center; */
@@ -606,25 +631,25 @@ footer {
   }
 
   .hero h1 {
-    margin: 1rem auto;
+    margin: -1rem auto;
     display: block;
-    font-size: 2.2rem;
+    font-size: 2rem;
     /* text-align: left; */
   }
 
   .hero div .second-content p.tagline {
-    padding-top: 2rem;
-    font-size: 1.4rem;
+    padding-top: 0.8rem;
+    font-size: 1.25rem;
     line-height: 1.3;
   }
 
   .hero div .second-content p#tagline {
     padding-top: 2rem;
-    font-size: 2rem;
+    font-size: 1.5rem;
   }
 
   .hero .second-content a {
-    margin-top: 2rem;
+    margin-top: 1.5rem;
   }
 
   #tagline {
@@ -710,7 +735,7 @@ footer {
 
   .mission-box p,
   .mission-box li {
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     padding-top: 1rem;
   }
 
@@ -770,7 +795,7 @@ footer {
   }
 
   header nav ul li a {
-    font-size: 1.5rem;
+    font-size: 1.2rem;
   }
 
   footer {
