--- a/project/styles/index.css
+++ b/project/styles/index.css
@@ -21,7 +21,6 @@
 
 body {
   background: var(--primary-color);
-  /* color: #333; */
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -624,10 +623,11 @@ footer {
     height: 100%;
   }
 
-  .hero h1 {
+  .hero h2 {
     margin: -1rem auto;
     display: block;
     font-size: 2rem;
+    color: var(--secondary-color);
     /* text-align: left; */
   }
 
